--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
     
     <div>  
-      <div>
+      <div class="btns">
+        <button class="back">Retour à Casablanca</button>
         <button class="changer">change city</button>
       </div>
       </div>
