--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div class="ville-container">
             <i class="fa-solid fa-location-dot"></i>
             <span class="ville"> Casablanca</span>
+            <span class="pays"> MA</span>
           </div>
           
           <div class="temperature">
